# MngX

./: CMakeLists.txt  Doxyfile  MngX  README.md  main.cpp  report.py  ut_report.py
Documentation/html/: annotated.html  annotated_dup.js  class_config-members.html  class_config.html  class_config.js  class_config___directory-members.html  class_config___directory.html  class_config___directory.js  class_control-members.html  class_control.html  class_control.js  class_directory-members.html  class_directory.html  class_directory.js  class_directory___structure-members.html  class_directory___structure.html  class_directory___structure.js  class_interface-members.html  class_interface.html  class_interface.js  class_main_window-members.html  class_main_window.html  classes.html  config_8h_source.html  config__directory_8h_source.html  control_8h_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_169a221bed9a62dfab39a0778e900a2f.html  dir_171b764decf33d63a7df2fab4f4bc6d8.html  dir_171b764decf33d63a7df2fab4f4bc6d8.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_fa19baa19c567821586e8dd4bc5b533f.html  dir_fa5672360010c0da74e6313272d3c7de.html  directory_8h_source.html  directory__structure_8h_source.html  files.html  files_dup.js  functions.html  (+12 more)
Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
Documentation/latex/: annotated.tex  class_config.tex  class_config___directory.eps  class_config___directory.tex  class_control.tex  class_directory.eps  class_directory.tex  class_directory___structure.eps  class_directory___structure.tex  class_interface.tex  class_main_window.tex  hierarchy.tex  refman.tex  struct_control_1_1command.tex
Serever/: Client  Server  compile.py  examle.cpp  server.cpp  server.hpp
Testing/: ut_compress.cpp  ut_config.cpp  ut_control.cpp  ut_network.cpp  ut_path.cpp
include/: archive.hpp  config.h  config.hpp  config_directory.h  control.h  control.hpp  directory.h  directory_structure.h  interface.h  log.hpp  network.hpp  path.hpp  path_backup.hpp  path_config.hpp  path_log.hpp  screen.h  screen.hpp  tar_compress.hpp  text_module.h
src/: archive.cpp  config.cpp  config_directory.cpp  control.cpp  directory.cpp  directory_structure.cpp  log.cpp  network.cpp  path.cpp  path_backup.cpp  path_config.cpp  path_log.cpp  screen.cpp  tar_compress.cpp  text_module.cpp
